--- a/css/index.css
+++ b/css/index.css
@@ -44,6 +44,7 @@ a {
 	border-top: solid 30px transparent;
 }
 
+/* Initially hide all sections from view. */
 .inner_about_container, .inner_portfolio_container, .inner_contact_container {
 	opacity: 0;
 }
@@ -533,6 +534,12 @@ h4.modal-title {
     overflow-y: auto;
 }
 
+.modal_image {
+	margin-top: 10px;
+	width: 70%;
+	border-radius: .5em;
+}
+
 .bold_tech {
 	font-weight: 700;
 	color: rgb(196, 0, 16);
@@ -584,13 +591,16 @@ a.read_more_hover:hover {
 	border: 1px solid #000;
 	border-radius: 50px 5px 50px 5px;
 	/*margin: 10px 20px;*/
-	background-size: 300px 300px;
+	/*background-size: 300px 300px;*/
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
 	position: relative;
 }
 
 .thumbnail_title {
 	display: inline-block;
-	padding: 0 20px;
+	padding: 0 5px;
 }
 
 .rethree_image {
@@ -600,6 +610,10 @@ a.read_more_hover:hover {
 /* TODO add this image */
 .baremedium_image {
 	background-image: url("../img/BareMedium_screen.png");	
+}
+
+.mss_image {
+	background-image: url("../img/MSS_landing_page.png");		
 }
 
 .dashed_border {
@@ -747,7 +761,7 @@ div.thumbnail p{
 
 footer {
 	font-size: 1rem;
-	background-color: #222;
+	background-color: #000;
 	color: #fff;
 	padding: 10px 0;
 }
