--- a/css/responsive.css
+++ b/css/responsive.css
@@ -123,7 +123,11 @@
 		font-size: 1.4em;
 	}
 
-	@keyframes css_spin {									
+	.css_trick {
+		animation-name: css_spin_768;
+	}
+
+	/*@keyframes css_spin {									
 		0% {
 			transform: rotate(0deg);
 		} 
@@ -136,7 +140,7 @@
 		100% {
 			transform: rotate(360deg);
 		}
-	}
+	}*/
 
 	.popover {
 		width: 150px;
@@ -210,20 +214,24 @@
 		margin-left: 4px;
 	}
 
-	@keyframes css_spin {									
-	0% {
-		transform: rotate(0deg);
-	} 
-
-	50% {
-		font-size: 4.3em;
-		font-weight: 800;
+	.css_trick {
+		animation-name: css_spin_990;
 	}
 
-	100% {
-		transform: rotate(360deg);
-	}
-}
+	/*@keyframes css_spin {									
+		0% {
+			transform: rotate(0deg);
+		} 
+
+		50% {
+			font-size: 4.3em;
+			font-weight: 800;
+		}
+
+		100% {
+			transform: rotate(360deg);
+		}
+	}*/
 
 	/*** Skills ***/
 	.skill_banner {
@@ -274,22 +282,24 @@
 		margin-left: 5px;
 	}
 
-	@keyframes css_spin {									
-	0% {
-		transform: rotate(0deg);
-	} 
-
-	50% {
-		font-size: 4.6em;
-		font-weight: 800;
+	.css_trick {
+		animation-name: css_spin_1130;
 	}
 
-	100% {
-		transform: rotate(360deg);
-	}
-}
+	/*@keyframes css_spin {									
+		0% {
+			transform: rotate(0deg);
+		} 
 
-	/*** Portfolio Work ***/
+		50% {
+			font-size: 4.6em;
+			font-weight: 800;
+		}
+
+		100% {
+			transform: rotate(360deg);
+		}
+	}*/
 	
 }
 
@@ -329,20 +339,24 @@
 		margin-left: 6px;
 	}
 
-	@keyframes css_spin {									
-	0% {
-		transform: rotate(0deg);
-	} 
-
-	50% {
-		font-size: 5.0em;
-		font-weight: 800;
+	.css_trick {
+		animation-name: css_spin_1330;
 	}
 
-	100% {
-		transform: rotate(360deg);
-	}
-}
+	/*@keyframes css_spin {									
+		0% {
+			transform: rotate(0deg);
+		} 
+
+		50% {
+			font-size: 5.0em;
+			font-weight: 800;
+		}
+
+		100% {
+			transform: rotate(360deg);
+		}
+	}*/
 
 	/*** Portfolio Work ***/
 	
