Added the NSBE-BMAC project to the portfolio section.
Also changed the spacing in between the portfolio objects.

--- a/css/index.css
+++ b/css/index.css
@@ -586,6 +586,10 @@ img.logo {
 	margin-bottom: 30px;
 }
 
+.inner_portfolio_container {
+	padding: 0 2em;
+}
+
 h4.modal-title {
 	font-family: 'Permanent Marker', sans-serif;
 }
@@ -616,7 +620,7 @@ h4.modal-title {
 
 .project_container {
 	width: 300px;
-	margin: 10px 20px;
+	margin: 10px 50px;
 }
 
 .project_container h3 {
@@ -681,6 +685,10 @@ a.read_more_hover:hover {
 
 .hangman_image {
 	background-image: url("../img/hangman_screen.png");
+}
+
+.nsbe_image {
+	background-image: url("../img/NSBE_screen.png")
 }
 
 .dashed_border {
