Added the QuizMe trivia game
Added the app to my portfolio section and as a subfolder on the site. Rearranged the portfolio section around a bit as well.

--- a/css/index.css
+++ b/css/index.css
@@ -688,7 +688,11 @@ a.read_more_hover:hover {
 }
 
 .nsbe_image {
-	background-image: url("../img/NSBE_screen.png")
+	background-image: url("../img/NSBE_screen.png");
+}
+
+.quizme_image {
+	background-image: url("../img/ScreenshotQuizMe.png");
 }
 
 .dashed_border {
